tests/Metalama.Framework.Tests.Integration/Tests/Aspects/InvalidCode/ConflictScope.t.cs
// CompileTimeAspectPipeline.ExecuteAsync failed.
// Error LAMA0226 on `Dictionary<IMethod,TargetCode>`: `The generic type 'Dictionary<IMethod,TargetCode>' combines run-time-only and compile-time-only types.`
// Error LAMA0241 on `<IMethod,TargetCode>`: `Cannot determine the execution scope of the expression because it has parts that must run at run time and other parts that must run at compile time.`
// Error LAMA0241 on `new()`: `Cannot determine the execution scope of the expression because it has parts that must run at run time and other parts that must run at compile time.`